Testsuite/ManualTests/3094/3094.c.lcov
    1|      1|int main() {
    2|      1|#pragma acc parallel
    3|      1|  {
    4|      1|#pragma acc loop tile(*, *)
    5|     31|    for (int ix = 0; ix < 30; ix++)
    6|     30|      ; /* { dg-error "not enough" } */
    7|      1|
    8|      1|#pragma acc loop tile(*, *)
    9|     31|    for (int ix = 0; ix < 30; ix++)
   10|    465|      for (int jx = 0; jx < ix; jx++) /* { dg-error "condition expression" } */
   11|    435|        ;
   12|      1|
   13|      1|#pragma acc loop tile(*)
   14|     31|    for (int ix = 0; ix < 30; ix++)
   15|    465|      for (int jx = 0; jx < ix; jx++) /* OK */
   16|    435|        ;
   17|      1|  }
   18|      1|  return 0;
   19|      1|}

